--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simondice",
+  "name": "y",
   "version": "1.0.0",
   "description": "Juego de Simón Dice",
   "main": "index.html",
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/franprince/simonDice#readme",
   "dependencies": {
+    "boostrap": "^2.0.0",
     "bootstrap": "^4.4.1",
     "sweetalert2": "^9.5.4"
   }
